# jax-qec

./: README.md  pyproject.toml  requirements.txt  setup.cfg
jax-qec/: codes.py  noise.py  simulation_console.py  simulator.py  utils.py
jax-qec/decoders/: base.py  repetition_decoder.py
jax-qec/noise/: base.py  bit_flip.py  phase_flip.py
jax-qec/simulator/: benchmark.py
jax_qec/: codes.py  simulation_console.py  utils.py
jax_qec/clifford/: gates.py
jax_qec/decoders/: base.py  repetition_decoder.py
jax_qec/discovery/: discoverer_utils.py  rl_discoverer.py
jax_qec/examples/: example01-gates.py
jax_qec/noise/: base.py  bit_flip.py  phase_flip.py
jax_qec/qecsimulator/: benchmark.py  simulate.py
