[metadata]
name = jax-qec
version = 0.1.0
description = A JAX-based quantum error correction toolkit
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = arshnoman2270@gmail.com
license = MIT
url = https://github.com/ArshNoman/jax-qec
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
python_requires = >=3.8
install_requires =
    jax
    numpy
    scipy
    matplotlib

[options.packages.find]
where = jax_qec

[options.extras_require]
dev =
    pytest
    black
    isort
    mypy

[tool:pytest]
testpaths = tests
